# Qadam

./: .gitignore  ADMIN_PANEL_SPEC.md  ADMIN_ROADMAP.md  CLAUDE.md  LICENSE  MEGAPROMPT_CLAUDE_CODE.md  MEGAPROMPT_REBUILD.md  PRD-Qadam-Full-Product-2026-03-30.md  PRD-Qadam-v1.1-Patch.md  PRODUCT_ROADMAP.md  QADAM_FOUNDATION.md  README.md  TECHNICAL_DECISIONS.md  TEST_SCENARIOS.md  qadam_design.pen
.github/workflows/: deploy.yml
.next/: trace  trace-build
deploy/: backup-db.sh  deploy.sh  healthcheck.sh  nginx.conf  qadam-backend.service  qadam-frontend.service
qadam/: Anchor.toml
qadam/programs/qadam/: Cargo.toml
qadam/programs/qadam/src/: constants.rs  errors.rs  events.rs  lib.rs
qadam/programs/qadam/src/helpers/: math.rs  mod.rs  release.rs
qadam/programs/qadam/src/instructions/: add_milestone.rs  admin_override_decision.rs  back_campaign.rs  cancel_campaign.rs  cast_vote.rs  claim_refund.rs  claim_tokens.rs  close_backer_position.rs  close_campaign.rs  create_campaign.rs  execute_extension_result.rs  increase_backing.rs  initialize_config.rs  mark_under_human_review.rs  mod.rs  release_milestone.rs  request_extension.rs  resolve_vote.rs  set_paused.rs  submit_milestone.rs  vote_on_extension.rs
qadam/programs/qadam/src/state/: backer.rs  campaign.rs  config.rs  milestone.rs  mod.rs  voting.rs
qadam/tests/: init_devnet.ts  (+2 more)
qadam_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  mix.exs
qadam_frontend/: ARCHITECTURE_NOTES.md  DESIGN_SYSTEM.md  FRONTEND_AUDIT.md  LANDING_REDESIGN.md  package-lock.json  package.json
(+198 files in other folders)
